--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <section class="w-full min-h-screen flex items-center p-32 bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] ">
+    <section class="w-full min-h-screen flex items-center bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] ">
 
-        <div class="bg-gray-300 w-96 m-auto  px-4 py-7 rounded-3xl">
+        <div class="bg-gray-300 w-5/6 max-w-96 sm:w-96  m-auto  px-4 py-7 rounded-3xl">
             <h1 class="flex items-center font-bold text-2xl ml-1 mb-6">
                 To-Do List
                 <svg class="h-8 w-8 text-zinc-900 ml-2"  width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">  <path stroke="none" d="M0 0h24v24H0z"/>  <rect x="5" y="3" width="14" height="18" rx="2" />  <line x1="9" y1="7" x2="15" y2="7" />  <line x1="9" y1="11" x2="15" y2="11" />  <line x1="9" y1="15" x2="13" y2="15" /></svg>
@@ -17,7 +17,7 @@
             </h1>
             <form class="mt-4 mb-4 relative">
                 <input id="task" type="text" placeholder="Add your Task!" class=" bg-slate-200 w-full p-3 rounded-3xl font-medium  placeholder:text-neutral-600 focus:outline-0 ">
-                <input type="submit" value="Add" id="btn" class="bg-orange-500 absolute right-0 p-3 rounded-3xl w-24 font-medium cursor-pointer">
+                <input type="submit" value="Add" id="btn" class="bg-orange-500 absolute right-0 p-3 rounded-3xl w-20 sm:w-24 font-medium cursor-pointer">
             </form>
             <ul id="task-list" class="mt-6 ml-3 mr-5 text-lg font-medium flex flex-col gap-4"></ul>
         </div>
