--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./output.css">
 </head>
 <body>
-    <section class="w-full min-h-screen flex items-center bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] ">
+    <section class="w-full min-h-screen flex items-center bg-slate-700 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))] ">
 
         <div class="bg-gray-300 w-5/6 max-w-96 sm:w-96  m-auto  px-4 py-7 rounded-3xl">
             <h1 class="flex items-center font-bold text-2xl ml-1 mb-6">
@@ -54,3 +54,4 @@
     }
 </style>
 </html>
+
